--- a/index.html
+++ b/index.html
@@ -25,22 +25,6 @@
     <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://calculations.tools/">
     <link rel="stylesheet" href="/base.css">
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebApplication",
-      "name": "Advanced Percentage Calculator",
-      "description": "Professional percentage calculator with multiple calculation modes and word counter",
-      "url": "https://calculations.tools/",
-      "applicationCategory": "UtilityApplication",
-      "operatingSystem": "Any",
-      "offers": {
-        "@type": "Offer",
-        "price": "0",
-        "priceCurrency": "USD"
-      }
-    }
-    </script>
     <script src="/header.js"></script>
 </head>
 <body>
@@ -155,11 +139,214 @@
                         <h3>What Percentage</h3>
                         <p>Determine what percentage one number represents of another. This is useful for finding ratios and proportions in various calculations.</p>
                     </div>
+<div class="seo-container">
+<h2>Percentage Calculator - Calculate Any Percentage Easily</h2>
+<p>A percentage calculator helps you calculate percentages quickly and correctly. You can use it to find a percentage of a number, calculate percentage increase or decrease, compare two numbers, and convert between fractions, decimals, and percents. This page explains how to calculate percentage in many situations with exact formulas and clear examples.</p>
+<h2>How to calculate percentage</h2>
+<p>The base percentage formula is: Percentage = (Part ÷ Whole) × 100.</p>
+<p>Example: What percentage is 25 out of 200? (25 ÷ 200) × 100 = 12.5%.</p>
+<h2>How to find percentage of a number</h2>
+<p>Use: Percentage of a number = Number × (Percent ÷ 100).</p>
+<p>Example: What is 20% of 150? 150 × (20 ÷ 100) = 30.</p>
+<h2>How to calculate percentage of money</h2>
+<p>The process is the same as any number. Multiply the amount by the percent as a decimal.</p>
+<p>Example: What is 15% of $200? 200 × 0.15 = $30.</p>
+<h2>Percentage increase calculator</h2>
+<p>Use: Percentage Increase = [(New Value - Original Value) ÷ Original Value] × 100.</p>
+<p>Example: Price increases from $50 to $65. (65 - 50) ÷ 50 × 100 = 30% increase.</p>
+<h2>Percentage decrease calculator</h2>
+<p>Use: Percentage Decrease = [(Original Value - New Value) ÷ Original Value] × 100.</p>
+<p>Example: Price drops from $800 to $600. (800 - 600) ÷ 800 × 100 = 25% decrease.</p>
+<h2>Percentage change calculator</h2>
+<p>Use one formula for both directions: Percentage Change = [(New - Old) ÷ Old] × 100.</p>
+<p>If the result is positive, it is a percentage increase. If the result is negative, it is a percentage decrease.</p>
+<p>Example: Sales move from 1,000 to 1,200. (1,200 - 1,000) ÷ 1,000 × 100 = 20% increase.</p>
+<h2>Percent change formula</h2>
+<p>The percent change formula is identical to the percentage change formula: ((New - Old) ÷ Old) × 100. Use it for growth and decline.</p>
+<h2>Percentage difference calculator</h2>
+<p>Percentage Difference compares two numbers relative to their average.</p>
+<p>Use: Percentage Difference = (|Value 1 - Value 2| ÷ Average of the two values) × 100.</p>
+<p>Example: Compare 90 and 100. Difference = 10. Average = (90 + 100) ÷ 2 = 95. (10 ÷ 95) × 100 = 10.53%.</p>
+<h2>Percent difference formula</h2>
+<p>It is the same as above. Use absolute difference over the average, then multiply by 100.</p>
+<h2>How to calculate percent difference</h2>
+<p>Step 1: Subtract the two numbers and take the absolute value. Step 2: Compute the average of the two numbers. Step 3: Divide the absolute difference by the average. Step 4: Multiply by 100 to get a percent.</p>
+<h2>Percentage calculator between two numbers</h2>
+<p>Enter both numbers to get percentage increase, percentage decrease, or percentage difference. This helps for prices, test scores, or metrics over time.</p>
+<h2>Percentage increase between two numbers</h2>
+<p>Use: (New - Old) ÷ Old × 100.</p>
+<p>Example: From 120 to 180. (180 - 120) ÷ 120 × 100 = 50% increase.</p>
+<h2>How to calculate percentage increase</h2>
+<p>Subtract the original from the new value, divide by the original value, then multiply by 100. Keep at least two decimals when precision matters.</p>
+<h2>How to calculate percentage increase or decrease</h2>
+<p>Use the same formula: (New - Old) ÷ Old × 100. Positive means increase. Negative means decrease. Report the sign or describe it as increase or decrease.</p>
+<h2>How to calculate percentage change</h2>
+<p>Again: (New - Old) ÷ Old × 100. This single formula handles all cases of change.</p>
+<h2>Percent increase calculator</h2>
+<p>A percent increase calculator outputs the increase in percent relative to the original value. It saves time and reduces errors on repeated tasks.</p>
+<h2>Percent decrease calculator</h2>
+<p>A percent decrease calculator outputs the drop in percent relative to the original value. It helps with discounts, loss, or performance declines.</p>
+<h2>Margin calculator</h2>
+<p>A margin calculator uses percentages to show profitability. It often reports gross profit margin, operating margin, or net margin as a percent of revenue.</p>
+<h3>How to calculate gross profit percentage</h3>
+<p>Use: Gross Profit Percentage = (Gross Profit ÷ Revenue) × 100, where Gross Profit = Revenue - Cost of Goods Sold (COGS).</p>
+<p>Example: Revenue = $200,000 and COGS = $150,000. Gross Profit = $50,000. ($50,000 ÷ $200,000) × 100 = 25% gross profit.</p>
+<h2>Percent calculator</h2>
+<p>A percent calculator can solve any of these formats fast: What is X percent of Y, X is what percent of Y, and what is the percentage change between two values.</p>
+<h2>Fraction to percent</h2>
+<p>Divide the numerator by the denominator, then multiply by 100.</p>
+<p>Example: 3/4 = 0.75 × 100 = 75%.</p>
+<h3>Fraction to percent calculator</h3>
+<p>Enter a fraction like 7/8 to get the percent automatically. The tool converts exactly and returns the percent and the decimal form.</p>
+<h2>Decimal to percent</h2>
+<p>Multiply the decimal by 100 and add the percent sign.</p>
+<p>Example: 0.35 × 100 = 35%.</p>
+<h3>Decimal to percent calculator</h3>
+<p>Enter a decimal like 0.126. The tool returns 12.6% instantly.</p>
+<h2>Percent to decimal calculator</h2>
+<p>Divide the percent by 100 to get the decimal.</p>
+<p>Example: 25% ÷ 100 = 0.25.</p>
+<h2>Proportion calculator</h2>
+<p>A proportion calculator solves missing values in ratios and uses equal ratios to compute a percent. It is useful for problems like 12 is 30% of what number, or what is 40% of 300.</p>
+<p>Example: 12 is 30% of X. Set 12 = 0.30 × X, so X = 12 ÷ 0.30 = 40.</p>
+<h2>How to calculate percent growth</h2>
+<p>Use: Percent Growth = (New Value - Old Value) ÷ Old Value × 100.</p>
+<p>Example: Customers grow from 2,000 to 2,600. (2,600 - 2,000) ÷ 2,000 × 100 = 30% growth.</p>
+<h2>How to calculate percentages</h2>
+<p>Step 1: Identify the part and the whole. Step 2: Divide part by whole. Step 3: Multiply by 100. Use the same pattern for money, quantities, and scores.</p>
+<h2>Math calculator for percentages</h2>
+<p>A math calculator with percent functions solves percent of a number, percent change, and percent difference without manual steps. A percent calculator is the fastest way to avoid mistakes in daily work.</p>
+<h2>Frequently asked questions about percentage calculations</h2>
+<h3>What percentage of X is Y</h3>
+<p>Use (Y ÷ X) × 100. Example: What percentage of 200 is 50. (50 ÷ 200) × 100 = 25%.</p>
+<h3>How do you calculate percentage difference between two numbers</h3>
+<p>Use (|Number1 - Number2| ÷ Average of the two numbers) × 100. Example: |120 - 100| ÷ ((120 + 100) ÷ 2) × 100 = 20 ÷ 110 × 100 = 18.18%.</p>
+<h3>How do you calculate percentage increase between two numbers</h3>
+<p>Use ((New Value - Old Value) ÷ Old Value) × 100. Example: (75 - 50) ÷ 50 × 100 = 50% increase.</p>
+<h3>How do you calculate percentage decrease between two numbers</h3>
+<p>Use ((Old Value - New Value) ÷ Old Value) × 100. Example: (80 - 60) ÷ 80 × 100 = 25% decrease.</p>
+<h3>How do you calculate percentage of a number</h3>
+<p>Use (Percent × Number) ÷ 100. Example: 20% of 150 is (20 × 150) ÷ 100 = 30.</p>
+<h3>How do you convert a fraction to percent</h3>
+<p>Divide the fraction, then multiply by 100. Example: 3/4 = 0.75 × 100 = 75%.</p>
+<h3>How do you convert a decimal to percent</h3>
+<p>Multiply the decimal by 100. Example: 0.45 × 100 = 45%.</p>
+<h3>How do you calculate gross profit percentage</h3>
+<p>Use (Gross Profit ÷ Revenue) × 100. Example: $4,000 ÷ $10,000 × 100 = 40%.</p>
+<h3>How do you calculate percentage of money</h3>
+<p>Multiply the amount by the percent as a decimal. Example: 15% of $250 is 250 × 0.15 = $37.50.</p>
+<h3>What is the percent change formula</h3>
+<p>Use ((New Value - Old Value) ÷ Old Value) × 100. A positive result is a percent increase. A negative result is a percent decrease.</p>
+</div>
                 </div>
             </section>
         </div>
     </main>
 <div id="footer-container"></div>
 <script src="script.js"></script>
+<script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "Advanced Percentage Calculator",
+    "description": "Professional percentage calculator with multiple calculation modes and word counter",
+    "url": "https://calculations.tools/",
+    "applicationCategory": "UtilityApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What percentage of X is Y?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use (Y ÷ X) × 100. Example: What percentage of 200 is 50? (50 ÷ 200) × 100 = 25%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate percentage difference between two numbers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use (|Number1 - Number2| ÷ Average of the two numbers) × 100. Example: |120 - 100| ÷ ((120 + 100) ÷ 2) × 100 = 20 ÷ 110 × 100 = 18.18%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate percentage increase between two numbers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use ((New Value - Old Value) ÷ Old Value) × 100. Example: (75 - 50) ÷ 50 × 100 = 50% increase."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate percentage decrease between two numbers?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use ((Old Value - New Value) ÷ Old Value) × 100. Example: (80 - 60) ÷ 80 × 100 = 25% decrease."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate percentage of a number?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use (Percent × Number) ÷ 100. Example: 20% of 150 is (20 × 150) ÷ 100 = 30."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you convert a fraction to percent?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Divide the fraction, then multiply by 100. Example: 3/4 = 0.75 × 100 = 75%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you convert a decimal to percent?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Multiply the decimal by 100. Example: 0.45 × 100 = 45%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate gross profit percentage?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use (Gross Profit ÷ Revenue) × 100. Example: $4,000 ÷ $10,000 × 100 = 40%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do you calculate percentage of money?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Multiply the amount by the percent as a decimal. Example: 15% of $250 is 250 × 0.15 = $37.50."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is the percent change formula?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Use ((New Value - Old Value) ÷ Old Value) × 100. A positive result is a percent increase. A negative result is a percent decrease."
+        }
+      }
+    ]
+  }
+]
+</script>
 </body>
 </html>
