--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <meta name="author" content="Advanced Percentage Calculator">
     <script src="https://cdn.tailwindcss.com"></script>
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://calculations.tools/">
+    <meta property="og:url" content="https://calculations.tools">
     <meta property="og:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="og:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more with our modern, fast, and accurate calculator.">
     <meta property="og:image" content="https://calculations.tools/open-graph.webp">
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://calculations.tools/">
+    <meta property="twitter:url" content="https://calculations.tools">
     <meta property="twitter:title" content="Advanced Percentage Calculator - Free Online Tool">
     <meta property="twitter:description" content="Professional percentage calculator with multiple modes. Calculate percentages, increases, decreases, and more.">
     <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
@@ -23,7 +23,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <link rel="canonical" href="https://calculations.tools/">
+    <link rel="canonical" href="https://calculations.tools">
     <link rel="stylesheet" href="/base.css">
     <script src="/header.js"></script>
 </head>
