--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Length Unit Converter</title>
+    <link rel="canonical" href="https://calculations.tools/conversion/length-converter">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/base.css">
     <style>
