--- a/word-counter.html
+++ b/word-counter.html
@@ -215,7 +215,7 @@
 </head>
 <body class="min-h-screen min-w-full bg-gradient-to-br from-slate-900 via-purple-900 to-slate-900">
     <!-- Background Effects -->
-    <div class="absolute inset-0 opacity-20">
+    <div class="inset-0 opacity-20">
         <div class="w-full h-full" style="background-image: url(&quot;data:image/svg+xml,%3Csvg width='60' height='60' viewBox='0 0 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.1'%3E%3Ccircle cx='30' cy='30' r='2'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E&quot;);"></div>
     </div>
     
