--- a/word-counter.html
+++ b/word-counter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Word Counter - Professional Text Analysis Tool</title>
+    <title>Advanced Word and Character Counter - Professional Text Analysis Tool</title>
     <link rel="canonical" href="https://calculations.tools/word-counter">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/base.css">
@@ -228,12 +228,8 @@
                     </svg>
                 </div>
             </div>
-            <h1 class="text-5xl font-bold bg-gradient-to-r from-white to-gray-300 bg-clip-text text-transparent mb-4 leading-tight">
-                Advanced Word Counter
-            </h1>
-            <p class="text-xl text-gray-300 max-w-2xl mx-auto">
-                Professional text analysis tool with comprehensive statistics. Fast, accurate, and beautifully designed to help you.
-            </p>
+            <h1 class="text-5xl font-bold bg-gradient-to-r from-white to-gray-300 bg-clip-text text-transparent mb-4 leading-tight">Advanced Word and Character Counter</h1>
+            <p class="text-xl text-gray-300 max-w-2xl mx-auto">Professional text analysis tool with comprehensive statistics. Fast, accurate, and beautifully designed to help you.</p>
         </div>
 
         <!-- Main Word Counter -->
