--- a/word-counter.html
+++ b/word-counter.html
@@ -382,7 +382,7 @@
         </div>
     </div>
     <div class="seo-container">
-        <h2>What Is a Word and character Counter?</h2>
+        <h2>What Is a Word and Character Counter?</h2>
         <p>A word counter and character counter are online tools that help you track the number of words and characters in your text. These tools are simple, fast, and easy to use.</p>
         <p>You either type or paste your text into the input box and see the counts update instantly. This process requires no registration and works for any type of content, including essays, posts, ads, articles, and web pages.</p>
         <h3>Why Use a Word Counter or Character Counter?</h3>
