--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Length Unit Converter</title>
+    <title>Length Unit Converter | Length Conversion Calculator ᐅ</title>
+    <meta name="description" content="Convert any length instantly with our free precision length converter. Switch between metric and imperial units like meters to feet, cm to inches, km to miles, feet to meters, inches to cm, miles to km, and more, using simple formulas and live results.">
+    <meta name="author" content="Advanced Percentage Calculator">
     <link rel="canonical" href="https://calculations.tools/conversion/length-converter">
     <script src="https://cdn.tailwindcss.com"></script>
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://calculations.tools/conversion/length-converter">
+    <meta property="og:title" content="Length Unit Converter | Length Conversion Calculator ᐅ">
+    <meta property="og:description" content="Convert any length instantly with our free precision length converter. Switch between metric and imperial units like meters to feet, cm to inches, km to miles, feet to meters, inches to cm, miles to km, and more, using simple formulas and live results.">
+    <meta property="og:image" content="https://calculations.tools/open-graph.webp">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://calculations.tools/conversion/length-converter">
+    <meta property="twitter:title" content="Length Unit Converter | Length Conversion Calculator ᐅ">
+    <meta property="twitter:description" content="Convert any length instantly with our free precision length converter. Switch between metric and imperial units like meters to feet, cm to inches, km to miles, feet to meters, inches to cm, miles to km, and more, using simple formulas and live results.">
+    <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="/base.css">
     <style>
         /* Custom animations */
