--- a/word-counter.html
+++ b/word-counter.html
@@ -3,7 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Word Counter and Character Counter - Professional Text Analysis Tool</title>
+    <title>Online Word and Character Counter | Free Word Count Tool ᐅ</title>
+    <meta name="description" content="Count words, characters, sentences, paragraphs, and more in real time. Get live reading time, speaking time, and keyword stats with our fast and accurate word and character counter tool.">
+    <meta name="author" content="Calculations.tools">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://calculations.tools/word-counter">
+    <meta property="og:title" content="Online Word and Character Counter | Free Word Count Tool ᐅ">
+    <meta property="og:description" content="Count words, characters, sentences, paragraphs, and more in real time. Get live reading time, speaking time, and keyword stats with our fast and accurate word and character counter tool.">
+    <meta property="og:image" content="https://calculations.tools/open-graph.webp">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://calculations.tools/word-counter">
+    <meta property="twitter:title" content="Online Word and Character Counter | Free Word Count Tool ᐅ">
+    <meta property="twitter:description" content="Count words, characters, sentences, paragraphs, and more in real time. Get live reading time, speaking time, and keyword stats with our fast and accurate word and character counter tool.">
+    <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="canonical" href="https://calculations.tools/word-counter">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="/base.css">
