--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Length Unit Converter | Length Conversion Calculator ᐅ</title>
     <meta name="description" content="Convert any length instantly with our free precision length converter. Switch between metric and imperial units like meters to feet, cm to inches, km to miles, feet to meters, inches to cm, miles to km, and more, using simple formulas and live results.">
-    <meta name="author" content="Advanced Percentage Calculator">
+    <meta name="author" content="Calculations.tools">
     <link rel="canonical" href="https://calculations.tools/conversion/length-converter">
     <script src="https://cdn.tailwindcss.com"></script>
     <meta property="og:type" content="website">
