--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -25,8 +25,8 @@
 </head>
 <body>
   <main class="container" style="margin-top: 100px; margin-bottom: 60px;">
-    <h1 class="main-title">Privacy Policy</h1>
-    <p class="subtitle">Last updated: <span id="last-updated"></span></p>
+    <h1 class="main-title" style="text-align:center">Privacy Policy</h1>
+    <p class="subtitle" style="text-align:center">Last updated: <span id="last-updated"></span></p>
     
     <div class="seo-container">
       <h2>Introduction</h2>
