--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -578,12 +578,6 @@
   ]
 }
 </script>
-<footer class="footer">
-  <div class="container">
-    <p>&copy; <script>document.write(new Date().getUTCFullYear())</script> calculations.tools. All rights reserved.</p>
-    <i>Built to help by <a href="https://www.linkedin.com/in/jesperpallesen20/" target="_blank">Jesper Pallesen</a></i>
-  </div>
-</footer>
     <script>
         // Conversion factors to meters
         const conversionFactors = {
@@ -762,6 +756,11 @@
 
         // Initialize when page loads
         document.addEventListener('DOMContentLoaded', init);
+    fetch('/footer.html')
+      .then(response => response.text())
+      .then(data => {
+        document.body.insertAdjacentHTML('beforeend', data);
+      });
     </script>
 </body>
 </html>
