--- a/about-us.html
+++ b/about-us.html
@@ -7,27 +7,22 @@
   <meta name="description" content="Learn about calculations.tools - your free resource for accurate percentage calculators, unit converters, and text analysis tools designed to simplify everyday calculations.">
   <meta name="keywords" content="about calculations.tools, calculation tools, converter tools, online calculators">
   <meta name="author" content="Jesper Pallesen">
-  
-  <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://calculations.tools/about-us">
   <meta property="og:title" content="About Us - calculations.tools">
   <meta property="og:description" content="Learn about calculations.tools - your free resource for accurate percentage calculators, unit converters, and text analysis tools.">
   <meta property="og:image" content="https://calculations.tools/open-graph.webp">
-
-  <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://calculations.tools/about-us">
   <meta property="twitter:title" content="About Us - calculations.tools">
   <meta property="twitter:description" content="Learn about calculations.tools - your free resource for accurate percentage calculators, unit converters, and text analysis tools.">
   <meta property="twitter:image" content="https://calculations.tools/open-graph.webp">
-
   <link rel="canonical" href="https://calculations.tools/about-us">
   <link rel="stylesheet" href="/base.css">
   <script src="/header.js"></script>
 </head>
 <body>
-  <div class="text-center mb-12" style="padding-top: 2rem;">
+  <div class="text-center mb-12" style="padding-top: 2rem;text-align:center">
     <h1 class="main-title">About calculations.tools</h1>
     <p class="subtitle">Free, Fast, and Accurate Calculation Tools for Everyone</p>
   </div>
