--- a/conversion/temperature-converter.html
+++ b/conversion/temperature-converter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Temperature Converter | Celsius Fahrenheit Kelvin Converter ᐅ</title>
+    <title>Temperature Converter | Convert Celsius to Fahrenheit fast ᐅ</title>
     <meta name="description" content="Convert temperature instantly with our free precision temperature converter. Switch between Celsius, Fahrenheit, Kelvin, Rankine, and Réaumur scales using exact formulas and live results.">
     <meta name="keywords" content="temperature converter, celsius to fahrenheit, fahrenheit to celsius, kelvin converter, celsius to kelvin, temperature conversion calculator, celsius fahrenheit converter, temperature calculator">
     <meta name="author" content="Calculations.tools">
@@ -11,12 +11,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://calculations.tools/conversion/temperature-converter">
-    <meta property="og:title" content="Temperature Converter | Celsius Fahrenheit Kelvin Converter ᐅ">
+    <meta property="og:title" content="Temperature Converter | Convert Celsius to Fahrenheit fast ᐅ">
     <meta property="og:description" content="Convert temperature instantly with our free precision temperature converter. Switch between Celsius, Fahrenheit, Kelvin, Rankine, and Réaumur scales using exact formulas and live results.">
     <meta property="og:image" content="https://calculations.tools/open-graph.webp">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://calculations.tools/conversion/temperature-converter">
-    <meta property="twitter:title" content="Temperature Converter | Celsius Fahrenheit Kelvin Converter ᐅ">
+    <meta property="twitter:title" content="Temperature Converter | Convert Celsius to Fahrenheit fast ᐅ">
     <meta property="twitter:description" content="Convert temperature instantly with our free precision temperature converter. Switch between Celsius, Fahrenheit, Kelvin, Rankine, and Réaumur scales using exact formulas and live results.">
     <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
