--- a/conversion/temperature-converter.html
+++ b/conversion/temperature-converter.html
@@ -624,68 +624,172 @@
             }
         },
         {
-            "@context": "https://schema.org",
-            "@type": "FAQPage",
-            "mainEntity": [
-                {
-                    "@type": "Question",
-                    "name": "How do I convert Celsius to Fahrenheit?",
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "Multiply Celsius by 9/5 (or 1.8), then add 32. Formula: °F = (°C × 9/5) + 32. Example: 20°C × 9/5 + 32 = 68°F."
-                    }
-                },
-                {
-                    "@type": "Question", 
-                    "name": "How do I convert Fahrenheit to Celsius?",
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "Subtract 32 from Fahrenheit, then multiply by 5/9. Formula: °C = (°F - 32) × 5/9. Example: (72°F - 32) × 5/9 = 22.2°C."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "How do I convert Celsius to Kelvin?", 
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "Add 273.15 to the Celsius temperature. Formula: K = °C + 273.15. Example: 25°C + 273.15 = 298.15 K."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "What temperature is the same in Celsius and Fahrenheit?", 
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "-40 degrees is the same in both Celsius and Fahrenheit. -40°C = -40°F. This is the only temperature where both scales intersect."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "Can Kelvin be negative?", 
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "No. Kelvin is an absolute temperature scale starting at absolute zero (0 K), the lowest theoretically possible temperature. There are no negative Kelvin values."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "What is the Rankine scale used for?", 
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "Rankine is an absolute temperature scale used primarily in engineering applications in the United States. It's particularly useful in thermodynamics, aerospace engineering, and chemical engineering when working with Fahrenheit-based systems that require absolute temperatures."
-                    }
-                },
-                {
-                    "@type": "Question",
-                    "name": "Is the Réaumur scale still used today?", 
-                    "acceptedAnswer": {
-                        "@type": "Answer",
-                        "text": "The Réaumur scale is largely obsolete but still appears in specialized contexts such as traditional European cheese making, sugar refining, and historical scientific documents."
-                    }
-                }
-            ]
-        }
-    ]
+  "@context": "https://schema.org",
+  "@type": "FAQPage",
+  "mainEntity": [
+    {
+      "@type": "Question",
+      "name": "How do I convert Celsius to Fahrenheit?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Multiply Celsius by 9/5 (or 1.8), then add 32. Formula: °F = (°C × 9/5) + 32. Example: 20°C × 9/5 + 32 = 68°F."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert Fahrenheit to Celsius?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Subtract 32 from Fahrenheit, then multiply by 5/9. Formula: °C = (°F - 32) × 5/9. Example: (72°F - 32) × 5/9 = 22.2°C."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the easiest way to estimate Celsius to Fahrenheit?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "A quick mental approximation: double the Celsius temperature and add 30. This gives you a rough Fahrenheit value. For example, 20°C: 20 × 2 + 30 = 70°F (actual: 68°F). For precise conversions, use the exact formula."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert Celsius to Kelvin?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Add 273.15 to the Celsius temperature. Formula: K = °C + 273.15. Example: 25°C + 273.15 = 298.15 K."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert Kelvin to Celsius?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Subtract 273.15 from the Kelvin temperature. Formula: °C = K - 273.15. Example: 300 K - 273.15 = 26.85°C."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can Kelvin be negative?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "No. Kelvin is an absolute temperature scale starting at absolute zero (0 K), the lowest theoretically possible temperature. There are no negative Kelvin values."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What temperature is the same in Celsius and Fahrenheit?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "-40 degrees is the same in both Celsius and Fahrenheit. -40°C = -40°F. This is the only temperature where both scales intersect."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why does the US use Fahrenheit instead of Celsius?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The United States adopted Fahrenheit before the metric system became widespread. When most countries transitioned to metric (including Celsius) in the 19th and 20th centuries, the US retained its traditional measurement systems due to established infrastructure, economic costs of conversion, and cultural preference."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Which temperature scale is more accurate?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "All temperature scales are equally accurate—they're just different ways to measure the same physical property. The choice of scale depends on regional convention and application. Scientists prefer Kelvin for absolute measurements, while Celsius and Fahrenheit are used for everyday purposes in different regions."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is absolute zero in different scales?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Absolute zero, the lowest possible temperature, is: 0 K (Kelvin), -273.15°C (Celsius), -459.67°F (Fahrenheit), 0°R (Rankine), and -218.52°Ré (Réaumur)."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is normal room temperature in different scales?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Normal room temperature (approximately 20-22°C) is: 20°C = 68°F = 293.15 K = 527.67°R = 16°Ré."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How do I convert Fahrenheit to Kelvin?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Subtract 32 from Fahrenheit, multiply by 5/9, then add 273.15. Formula: K = (°F - 32) × 5/9 + 273.15. Example: (77°F - 32) × 5/9 + 273.15 = 298.15 K."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the Rankine scale used for?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Rankine is an absolute temperature scale used primarily in engineering applications in the United States. It's particularly useful in thermodynamics, aerospace engineering, and chemical engineering when working with Fahrenheit-based systems that require absolute temperatures."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Is the Réaumur scale still used today?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "The Réaumur scale is largely obsolete but still appears in specialized contexts such as traditional European cheese making, sugar refining, and historical scientific documents. Most modern applications have switched to Celsius or Fahrenheit."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the normal human body temperature in all scales?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Normal human body temperature is approximately: 37°C = 98.6°F = 310.15 K = 558.27°R = 29.6°Ré."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "At what temperature does water boil on different scales?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "At standard atmospheric pressure, water boils at: 100°C = 212°F = 373.15 K = 671.67°R = 80°Ré."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Can I use a temperature converter for cooking?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Yes, temperature converters are essential for cooking, especially when using recipes from different countries. Oven temperatures, meat internal temperatures, and candy-making temperatures all require accurate conversions between Celsius and Fahrenheit."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "What is the difference between Celsius and centigrade?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "They are the same scale. The scale was originally called \"centigrade\" (meaning 100 degrees) but was officially renamed \"Celsius\" in 1948 to honor Anders Celsius, who developed the scale."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "Why are there so many different temperature scales?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "Different temperature scales were developed at different times in history by various scientists, each using different reference points. Some scales were designed for everyday use (Celsius, Fahrenheit), while others were created for scientific purposes (Kelvin, Rankine). Regional preferences and historical adoption patterns explain why multiple scales persist today."
+      }
+    },
+    {
+      "@type": "Question",
+      "name": "How accurate is an online temperature converter?",
+      "acceptedAnswer": {
+        "@type": "Answer",
+        "text": "If the converter uses standard conversion formulas, it will be highly accurate, typically to several decimal places. This precision is suitable for virtually all practical applications from cooking to scientific calculations."
+      }
+    }
+  ]
+}
+]
     </script>
 </body>
 </html>
