--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <!-- Hero Section -->
             <section class="calculator-interface" aria-label="About Calculations.tools" style="margin-bottom: 3rem;">
                 <div class="calculator-container" style="text-align: center;">
-                    <h2 style="font-size: 2rem; margin-bottom: 1rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text;">Your Go-To Source for Quick Calculations</h2>
+                    <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem; color: white; font-weight: 700;">Your Go-To Source for Quick Calculations</h2>
                     <p style="font-size: 1.125rem; color: rgba(255, 255, 255, 0.9); max-width: 800px; margin: 0 auto 2rem; line-height: 1.6;">
                         Calculations.tools provides a suite of professional-grade calculation and conversion tools, all completely free. Whether you need to calculate percentages, count words, or convert between different units, we've got you covered with fast, accurate, and user-friendly tools.
                     </p>
@@ -46,7 +46,7 @@
 
             <!-- Tools Grid -->
             <section class="calculator-types" aria-label="Available Tools">
-                <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem; color: white;">Our Tools</h2>
+                <h2 style="text-align: center; font-size: 2rem; margin-bottom: 2rem; color: white; font-weight: 700;">Our Tools</h2>
                 <div class="calculator-grid">
                     <a href="/percentage-calculator" class="calculator-card" style="text-decoration: none; cursor: pointer;">
                         <div class="card-icon basic-icon">%</div>
