--- a/conversion/temperature-converter.html
+++ b/conversion/temperature-converter.html
@@ -340,6 +340,7 @@
             <p><strong>Italian food industries:</strong> Some traditional Italian food production still references Réaumur</p>
 
             <h2>Key Temperature Reference Points</h2>
+            <div class="responsive-table">
             <table>
                 <thead>
                     <tr><th>Reference Point</th><th>Celsius</th><th>Fahrenheit</th><th>Kelvin</th><th>Rankine</th><th>Réaumur</th></tr>
@@ -352,7 +353,7 @@
                     <tr><td>Water Boiling Point</td><td>100°C</td><td>212°F</td><td>373.15 K</td><td>671.67°R</td><td>80°Ré</td></tr>
                 </tbody>
             </table>
-
+            </div>
             <h2>Quick Temperature Conversion Reference</h2>
             <table>
                 <thead>
