--- a/conversion/case-converter.html
+++ b/conversion/case-converter.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Converter | Change Text Case Online - Upper, Lower, Title Case ᐅ</title>
+    <title>Case Converter Tool | Change Uppercase to Lowercase & more ᐅ</title>
     <meta name="description" content="Free online case converter tool. Instantly convert text to uppercase, lowercase, title case, sentence case, capitalized case, alternating case, and inverse case. Fast and accurate with character and word count.">
     <meta name="keywords" content="case converter, text case converter, uppercase converter, lowercase converter, title case, sentence case, capitalized case, change text case, text transformation, case changer">
     <meta name="author" content="Calculations.tools">
@@ -11,12 +11,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://calculations.tools/conversion/case-converter">
-    <meta property="og:title" content="Case Converter | Change Text Case Online - Upper, Lower, Title Case ᐅ">
+    <meta property="og:title" content="Case Converter Tool | Change Uppercase to Lowercase & more ᐅ">
     <meta property="og:description" content="Free online case converter tool. Instantly convert text to uppercase, lowercase, title case, sentence case, capitalized case, alternating case, and inverse case. Fast and accurate with character and word count.">
     <meta property="og:image" content="https://calculations.tools/open-graph.webp">
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://calculations.tools/conversion/case-converter">
-    <meta property="twitter:title" content="Case Converter | Change Text Case Online - Upper, Lower, Title Case ᐅ">
+    <meta property="twitter:title" content="Case Converter Tool | Change Uppercase to Lowercase & more ᐅ">
     <meta property="twitter:description" content="Free online case converter tool. Instantly convert text to uppercase, lowercase, title case, sentence case, capitalized case, alternating case, and inverse case. Fast and accurate with character and word count.">
     <meta property="twitter:image" content="https://calculations.tools/favicon-512x512.png">
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
