--- a/conversion/currency-converter.html
+++ b/conversion/currency-converter.html
@@ -180,9 +180,7 @@
                     </form>
                 </div>
             </div>
-
-            <!-- SEO Content -->
-            <section class="seo-content" aria-label="Currency Converter Information">
+            <div class="seo-container">
                 <h2>Free Real-Time Currency Converter</h2>
                 <p>
                     Convert between any world currencies instantly with our free currency converter. We provide real-time mid-market exchange rates updated daily for accurate conversions. Whether you're traveling, shopping online internationally, or managing foreign investments, our currency converter gives you the most accurate exchange rates available.
@@ -271,8 +269,7 @@
                     <li><strong>Rate transparency:</strong> See the exact mid-market rate being used</li>
                     <li><strong>Last updated time:</strong> Know exactly when the exchange rate was last refreshed</li>
                 </ul>
-
-                <h2>Frequently Asked Questions</h2>
+                <h2>Frequently Asked Questions about currency conversions</h2>
                 <div class="faq-item">
                     <h3>How accurate are the exchange rates?</h3>
                     <p>Our exchange rates are sourced from reliable financial data providers and updated daily. We display the mid-market rate, which is the most accurate representation of a currency's true value on the global market.</p>
@@ -353,12 +350,10 @@
                     <h3>How do exchange rates affect international shopping?</h3>
                     <p>When shopping internationally online, your credit card company will convert the price using their exchange rate (usually close to mid-market) plus a foreign transaction fee (typically 1-3%). Use our converter to estimate the final cost in your currency.</p>
                 </div>
-            </section>
+            </div>
         </div>
     </main>
-
     <script id="footer-script" src="/footer.html"></script>
-    
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
