--- a/conversion/currency-converter.html
+++ b/conversion/currency-converter.html
@@ -148,7 +148,8 @@
                             <label for="fromAmount" style="display: block; color: white; font-weight: 500; margin-bottom: 0.5rem;">Amount</label>
                             <div style="display: grid; grid-template-columns: 1fr auto; gap: 0.75rem; align-items: center;">
                                 <input 
-                                    type="number" 
+                                    type="tel"
+                                    inputmode="numeric"
                                     id="fromAmount" 
                                     class="form-input" 
                                     placeholder="1,000" 
