--- a/conversion/temperature-converter.html
+++ b/conversion/temperature-converter.html
@@ -125,6 +125,7 @@
                             <input
                                 id="input-value"
                                 type="number"
+                                pattern="[0-9.,]*"
                                 value="0"
                                 step="0.01"
                                 class="w-full h-10 px-3 py-2 bg-white/10 border border-white/20 text-white placeholder-gray-400 rounded-md focus:border-blue-400 focus:outline-none focus:ring-2 focus:ring-blue-400/50"
