--- a/conversion/length-converter.html
+++ b/conversion/length-converter.html
@@ -125,6 +125,7 @@
                                 id="input-value"
                                 type="text"
                                 inputmode="decimal"
+                                pattern="[0-9.,]*"
                                 value="1"
                                 class="w-full h-10 px-3 py-2 bg-white/10 border border-white/20 text-white placeholder-gray-400 rounded-md focus:border-blue-400 focus:outline-none focus:ring-2 focus:ring-blue-400/50"
                                 placeholder="Enter value"
