--- a/conversion/weight-converter.html
+++ b/conversion/weight-converter.html
@@ -124,7 +124,8 @@
                             </label>
                             <input
                                 id="input-value"
-                                type="number"
+                                type="text"
+                                inputmode="decimal"
                                 value="1"
                                 class="w-full h-10 px-3 py-2 bg-white/10 border border-white/20 text-white placeholder-gray-400 rounded-md focus:border-blue-400 focus:outline-none focus:ring-2 focus:ring-blue-400/50"
                                 placeholder="Enter value"
