--- a/week-number.html
+++ b/week-number.html
@@ -921,13 +921,13 @@ weeknum = weekOfYear(today());</code>
                 tbody.appendChild(tr);
             }
 
-            // Scroll to current week after build
-            setTimeout(() => {
-                const currentRow = document.querySelector('.current-week');
-                if (currentRow) {
-                    currentRow.scrollIntoView({ behavior: 'smooth', block: 'center' });
-                }
-            }, 500);
+            // // Scroll to current week after build
+            // setTimeout(() => {
+            //     const currentRow = document.querySelector('.current-week');
+            //     if (currentRow) {
+            //         currentRow.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            //     }
+            // }, 500);
         }
 
         // ===== Copy Code Button =====
