--- a/week-number.html
+++ b/week-number.html
@@ -59,7 +59,7 @@
             border-radius: 1.5rem;
             padding: 3rem 2rem;
             text-align: center;
-            max-width: 700px;
+            max-width: 56rem;
             margin: 0 auto 3rem;
             position: relative;
             overflow: hidden;
@@ -120,7 +120,7 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
             gap: 1rem;
-            max-width: 700px;
+            max-width: 56rem;
             margin: 0 auto 3rem;
         }
         .info-card {
