--- a/week-number.html
+++ b/week-number.html
@@ -349,6 +349,9 @@
             .week-table th:nth-child(1), .week-table td:nth-child(1) {
                 width: 60px;
             }
+            .current-badge {
+                display: none;
+            }
         }
     </style>
     <script src="/header.js"></script>
