--- a/compare-text.html
+++ b/compare-text.html
@@ -477,7 +477,7 @@ console.log("Done!");`;
     }
 
     let lastDiff = [];
-    let currentView = 'unified';
+    let currentView = 'sbs';
 
     function findDifferences() {
         const a = document.getElementById('original').value.split('\n');
