--- a/compare-text.html
+++ b/compare-text.html
@@ -198,8 +198,8 @@
                         </div>
                         <div style="display:flex;gap:0.5rem;align-items:center;">
                             <div class="diff-view-toggle">
-                                <button id="btn-sbs" onclick="setView('sbs')">Side-by-Side</button>
-                                <button id="btn-unified" class="active" onclick="setView('unified')">Unified</button>
+                                <button id="btn-unified" onclick="setView('unified')">Unified</button>
+                                <button id="btn-sbs" class="active" onclick="setView('sbs')">Side-by-Side</button>
                             </div>
                             <button class="toolbar-btn" onclick="copyDiff()" title="Copy diff">📋 Copy Diff</button>
                         </div>
